--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="timeline-item" id="2021-george-floyd-verdict">
-            <h2>2021 - George Floyd Verdict and Reactions</h2> <img src="images/george-verdict.jpg" alt="Image for George Floyd Verdict">
+            <h2>2021 - George Floyd Verdict</h2> <img src="images/george-verdict.jpg" alt="Image for George Floyd Verdict">
             <p>On April 20, 2021, after a three-week trial and 10 hours of deliberation, the jury found Derek Chauvin guilty of second-degree murder, third-degree murder, and second-degree manslaughter for the murder of George Floyd. Chauvin was sentenced
                 to 22.5 years in prison. The other three officers involved in Floyd's arrest were also charged with aiding and abetting murder and manslaughter.</p>
         </div>
@@ -187,15 +187,6 @@
                 with their training and protocols. The U.S. Department of Justice also launched a civil rights investigation into the incident.</p>
         </div>
 
-        <div class="timeline-item" id="2021-derek-chauvin-sentencing">
-            <h2>2021 - Derek Chauvin Sentencing</h2> <img src="images/derek-sentencing.jpg" alt="Image for Derek Chauvin Sentencing">
-            <p>On June 25, 2021, Derek Chauvin was sentenced to 22.5 years in prison for the murder of George Floyd. Chauvin had been convicted of second-degree murder, third-degree murder, and second-degree manslaughter on April 20, 2021, after a three-week
-                trial and 10 hours of deliberation by the jury. Chauvin faced a maximum sentence of 40 years in prison.</p>
-            <p>The sentencing of Derek Chauvin sparked reactions across the country and the world, with many people expressing mixed feelings about the outcome. Some people celebrated the sentence as a rare instance of justice and accountability for a police
-                officer who killed a Black person. They also praised the courage and resilience of Floyd's family and supporters, as well as the witnesses and activists who fought for his case. Others felt that the sentence was too lenient and did not
-                reflect the severity of Chauvin's crime. They also pointed out that one conviction did not mean that systemic racism and police violence were over, and that more work and reforms were needed to achieve lasting change.
-            </p>
-        </div>
 
 
         <div class="timeline-item" id="2021-ahmaud-arbery-verdict">
