--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="#2021-elijah-mcclain">2021 - Murder of Elijah McClain</a></li>
             <li><a href="#2021-elijah-mcclain-protests">2021 - Elijah McClain Protests</a></li>
             <li><a href="#2021-ahmaud-arbery-verdict">2021 - Ahmaud Arbery Verdict</a></li>
-            <li><a href="#black-lives-matter-future"> Black Lives Matter Future</a></li>
+            <li><a href="#black-lives-matter-future"> Black Lives Matter's Future</a></li>
         </ul>
     </nav>
     <div class="timeline">
