--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="timeline">
         <div class="timeline-item" id="2012">
             <h2>2012 - Murder of Trayvon Martin</h2> <img src="images/trayvon.webp" alt="Image for Trayvon Martin ">
-            <p> Trayvon Martin, an unarmed 17-year-old African American student, was fatally shot by George Zimmerman, a neighborhood watch volunteer, in Sanford, Florida. Martin was walking back from a convenience store when he was confronted by Zimmerman,
-                who claimed he looked suspicious. Zimmerman followed Martin despite being told by the police dispatcher not to do so. A struggle ensued and Zimmerman shot Martin in the chest, killing him.</p>
+            <p> Trayvon Martin, an unarmed 17-year-old black student, was fatally shot by George Zimmerman, a neighborhood watch volunteer, in Sanford, Florida. Martin was walking back from a convenience store when he was confronted by Zimmerman, who claimed
+                he looked suspicious. Zimmerman followed Martin despite being told by the police dispatcher not to do so. A struggle ensued and Zimmerman shot Martin in the chest, killing him.</p>
         </div>
 
         <div class="timeline-item" id="2012-protests">
