--- a/index.html
+++ b/index.html
@@ -231,12 +231,13 @@
                 <li>Several states and cities enacted laws and policies to reform their police departments, such as banning chokeholds, limiting use-of-force, increasing transparency and accountability, diverting funds to social services, and creating civilian
                     review boards.</li>
                 <li>Corporations and organizations supported racial equity and diversity initiatives, such as donating money to social justice causes, hiring more people of color, creating anti-racism programs, and promoting Black-owned businesses.</li>
-                <li>Celebrities and influencers used their platforms to raise awareness and funds for the Black Lives Matter movement and other related causes, such as donating money, participating in protests, speaking out against racism, and amplifying
-                    black voices.</li>
-                <li>Media outlets and platforms increased their coverage and representation of Black stories and perspectives, such as featuring more Black journalists, authors, artists, and creators, highlighting Black history and culture, and addressing
-                    racial issues and biases.</li>
+                <li>Celebrities and influencers used their platforms to raise awareness and funds for the Black Lives Matter movement and other related causes, by donating money, participating in protests, speaking out against racism, and amplifying black
+                    voices.
+                </li>
+                <li>Media outlets and platforms increased their coverage and representation of Black stories and perspectives by featuring more black journalists, authors, artists, and creators, highlighting black history and culture, and addressing racial
+                    issues and biases.</li>
                 <li>Educational institutions and educators incorporated more Black history and culture into their curricula and classrooms, as well as addressed racial disparities and discrimination in their policies and practices.</li>
-                <li>Sports leagues and athletes expressed their solidarity and support for the Black Lives Matter movement and other related causes, such as wearing shirts and masks with messages, kneeling during the national anthem, boycotting games, and
+                <li>Sports leagues and athletes expressed their solidarity and support for the Black Lives Matter movement and other related causes, through wearing shirts and masks with messages, kneeling during the national anthem, boycotting games, and
                     speaking out against racism.</li>
             </ul>
             <p>Despite some progress, The Black Lives Matter movement's work is obviously not over. Federally, and across many states and cities, police reform failed to pass, so there is clearly a lot of work to do to achieve its goals and vision of a world
