--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <nav>
         <ul>
             <li><a href="#2012">2012 - Trayvon Martin</a></li>
-            <li><a href="#2013">2013 - Creation of BLM</a></li>
-            <li><a href="#2014-michael-brown">2014 - Michael Brown</a></li>
-            <li><a href="#2014-michael-brown-protests">2014 - Michael Brown protests</a></li>
-            <li><a href="#2014-eric-garner">2014 - Eric Garner</a></li>
+            <li><a href="#2012-protests">2013 - Emergence of BLM</a></li>
+            <li><a href="#2013">2013 - Founding of BLM movement</a></li>
+            <li><a href="#2014-michael-brown">2014 - Murder of Michael Brown</a></li>
+            <li><a href="#2014-michael-brown-protests">2014 - Ferguson Uprising and Protests</a></li>
+            <li><a href="#2014-eric-garner">2014 - Murder of Eric Garner</a></li>
             <li><a href="#2014-eric-garner-protests">2014 - Eric Garner protests and "I Can't Breathe"</a></li>
-            <li><a href="#2016-philando-castile">2016 - Philando Castile</a></li>
+            <li><a href="#2016-philando-castile">2016 - Murder of Philando Castile</a></li>
             <li><a href="#2016-philando-castile-protests">2016 - Philando Castile protests</a></li>
-            <li><a href="#2020-george-floyd">2020 - George Floyd</a></li>
+            <li><a href="#2020-george-floyd">2020 - Murder of George Floyd</a></li>
             <li><a href="#2020-george-floyd-protests">2020 - George Floyd protests</a></li>
-            <li><a href="#2020-breonna-taylor">2020 - Breonna Taylor</a></li>
-            <li><a href="#2020-breonna-taylor-protests">2020 - Breonna Taylor Protests</a></li>
+            <li><a href="#2020-breonna-taylor">2020 - Murder of Breonna Taylor</a></li>
+            <li><a href="#2020-breonna-taylor-protests">2020 - Breonna Taylor Protests and "Say Her Name"</a></li>
             <li><a href="#2020-defund-police">2020 - Defund the Police</a></li>
             <li><a href="#2020-global-protests">2020 - Global Protests</a></li>
             <li><a href="#2021-george-floyd-verdict">2021 - George Floyd Verdict</a></li>
@@ -54,7 +55,7 @@
         </div>
 
         <div class="timeline-item" id="2013">
-            <h2>2013 - Founding of Black Lives Matter</h2> <img src="images/blm-founders.jpg" alt="Image for BLM Founding">
+            <h2>2013 - Founding of Black Lives Matter movement</h2> <img src="images/blm-founders.jpg" alt="Image for BLM Founding">
             <p>Following the acquittal of Trayvon Martin's murderer, George Zimmerman, activists Alicia Garza, Patrisse Cullors, and Opal Tometi created the Black Lives Matter hashtag which soon spurred a global movement. The movement grew into a network
                 of chapters and organizations across the country and the world, organizing protests, campaigns, events, and programs to address various issues affecting black communities, such as mass incarceration, education, health care, economic justice,
                 environmental justice, LGBTQ+ rights, and more. The movement also aimed to affirm the humanity and dignity of black people and challenge the negative stereotypes and narratives that devalue their lives.</p>
@@ -101,7 +102,7 @@
         </div>
 
         <div class="timeline-item" id="2020-george-floyd">
-            <h2>2020 - Murder of George Floyd and Global Protests</h2> <img src="images/george.png" alt="Image for George Floyd ">
+            <h2>2020 - Murder of George Floyd </h2> <img src="images/george.png" alt="Image for George Floyd ">
             <p>George Floyd, a 46-year-old black man, was murdered in Minneapolis, Minnesota, during an arrest for allegedly using a counterfeit bill. Derek Chauvin, a white police officer, knelt on Floyd's neck for over nine minutes while Floyd was handcuffed
                 and lying face down, begging for his life and repeatedly saying “I can't breathe”. Floyd's murder, captured on video, sparked some of the largest protests ever seen across the United States and around the world.</p>
         </div>
@@ -115,7 +116,7 @@
                 with aiding and abetting murder and manslaughter. The U.S. Department of Justice also launched a civil rights investigation into the Minneapolis Police Department.</p>
         </div>
         <div class="timeline-item" id="2020-breonna-taylor">
-            <h2>2020 - Breonna Taylor's Death</h2>
+            <h2>2020 - Murder of Breonna Taylor's </h2>
             <img src="images/breonna.jpeg " alt="Image for Breonna Taylor ">
             <p>Breonna Taylor, a 26-year-old black woman, was fatally shot in her Louisville, Kentucky apartment on March 13, 2020, when white plainclothes officers Jonathan Mattingly, Brett Hankison, and Myles Cosgrove of the Louisville Metro Police Department
                 (LMPD) forced entry into the apartment as part of an investigation into drug dealing operations. The police used a no-knock warrant in the middle of the night to enter the home, but Taylor's home was the wrong one, resulting in her boyfriend
